Add a test for tree_predict, but ignore it because it fails